--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -13,6 +13,14 @@
     float: right;
 }
 
+@media screen and (max-width: 550px) {
+    .about-links + p {
+        clear: both;
+        width: 100%;
+        display: block;
+    }
+}
+
 .about-img {
     margin-bottom: 40px;
     position: relative;
@@ -35,8 +43,6 @@
         transition: .5s ease-out;
     }
 }
-
-.about-img:hover:before {}
 
 .project-psd:hover {
     color: $pink;
@@ -82,6 +88,3 @@
     margin-bottom: 1em;
 }
 
-.dev {
-    margin-top: 1em;
-}
